ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.0.14
    • Affects Version/s: 6.0.12, 6.0.13
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • QE 2024-02-05, QE 2024-02-19
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In PM-1950 we introduced an internal flag $_generateV2ResumeTokens which can be used only when test commands are enabled.

      This flag is supposed to be only set by a change stream user while opening a change stream cursor, but it is also set erroneously internally when $changeStreamSplitLargeEvent is present in the change stream pipeline, which leads to an assertion in production setups without test commands enabled.

            Assignee:
            Romans Kasperovics
            Reporter:
            Romans Kasperovics
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: